--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -1,4 +1,4 @@
-<p-growl [(value)]="msgs" sticky=true ></p-growl>
+<p-growl [(value)]="msgs" life=7000 ></p-growl>
 <div [@routerTransition]>
     <h2 class="text-muted container">Lever Selection</h2>
     <div class="container">
